--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-path.to.data.file=src/main/resources
+path.to.ingredient.file=src/main/resources
+path.to.recipe.file=src/main/resources
 name.of.data.file=data.json
 
 
