--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-path.to.ingredient.file=src/main/resources
-path.to.recipe.file=src/main/resources
-name.of.data.file=data.json
+path.to.ingredient.file=src/main/resources/ingredients.json
+path.to.recipe.file=src/main/resources/recipes.json
+
 
 
